Updates the accessibility tree when style changes dynamically

This patch also fixes the bug whereby Jaws wasn't announcing the visited state on a link.
We need to update the accessibility tree if there are any changes to the way a layout object is painted.
To be safe, we update the whole subtree.
The update needs to happen after the style change, not before, so as to catch any changes to the visited link state, color and font.
R=dmazzoni@chromium.org, aleventhal@chromium.org

Change-Id: I03f512a95f8101c603a712fb3d62e7b31a59da5e
Bug: 898706
Reviewed-on: https://chromium-review.googlesource.com/c/1298173
Commit-Queue: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605585}
Former-commit-id: 077f8178bd8a84c709ad06a45b3e43386301e7fd