content/shell/test_runner/web_ax_object_proxy.cc
@@ -694,6 +694,7 @@ gin::ObjectTemplateBuilder WebAXObjectProxy::GetObjectTemplateBuilder(
       .SetProperty("isExpanded", &WebAXObjectProxy::IsExpanded)
       .SetProperty("checked", &WebAXObjectProxy::Checked)
       .SetProperty("isVisible", &WebAXObjectProxy::IsVisible)
+      .SetProperty("isVisited", &WebAXObjectProxy::IsVisited)
       .SetProperty("isOffScreen", &WebAXObjectProxy::IsOffScreen)
       .SetProperty("isCollapsed", &WebAXObjectProxy::IsCollapsed)
       .SetProperty("hasPopup", &WebAXObjectProxy::HasPopup)
@@ -1184,6 +1185,11 @@ bool WebAXObjectProxy::IsCollapsed() {
 bool WebAXObjectProxy::IsVisible() {
   accessibility_object_.UpdateLayoutAndCheckValidity();
   return accessibility_object_.IsVisible();
+}
+
+bool WebAXObjectProxy::IsVisited() {
+  accessibility_object_.UpdateLayoutAndCheckValidity();
+  return accessibility_object_.IsVisited();
 }
 
 bool WebAXObjectProxy::IsOffScreen() {
