content/shell/test_runner/web_ax_object_proxy.h
@@ -112,6 +112,8 @@ class WebAXObjectProxy : public gin::Wrappable<WebAXObjectProxy> {
   bool IsExpanded();
   std::string Checked();
   bool IsVisible();
+  // Exposes the visited state of a link.
+  bool IsVisited();
   bool IsOffScreen();
   bool IsCollapsed();
   bool IsValid();
